
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 JUL 09a
  * in bin
    - updated Keller-Kloker.wrp
    - updated ns_SDBD.wrp


2019 JUL 02a
  * in tools
    - renamed tarwarp.sh to tarCFDWARP.sh
  * in tarCFDWARP.sh
    - replaced all instances of warp by CFDWARP   


2019 JUN 08b
  * in CONTRIB
    - updated the contributions


2019 JUN 08a
  * in CONTRIB
    - updated the contributions 
  * in cycle/share/cycle_share.c, lib/exm/exm.c, model/chem/_H2_Air_9s_20r_Jachimowsky/chem.c,
    model/share/fluid_share.c, model/thermo/_generic/thermo.c, src/common.c, src/main.c, src/post.c
    - updated Copyright notices
  * in model/chem/old/_kerosene19s24r/chem.c, model/chem/old/_lutz/chem.c, 
    model/chem/old/_singh/chem.c
    - added Copyright notice


2019 JUN 07a
  * in model/emfield/_Epotential*/emfield.c
    - got rid of UNSTEADYTERMS
  * in model/emfield/_emfield.h
    - added _phim1()
  * in model/share/emfield_share.c
    - fixed a bug: got rid of UNSTEADYTERMS as this wasn't set to TRUE as in emfield.c 


2019 MAY 26a
  * renamed
    - for_zone_ijk -> for_ijk
    - for_zone_kji -> for_kji
    - for_zone_kij -> for_kij
    - for_zone_jik -> for_jik


2019 MAY 25d
  * in README and USAGE
    - further changes


2019 MAY 25c
  * in README
    - further changes
    

2019 MAY 25b
  * in README
    - added description of the code and unique capabilities
  * in tools/indentwithwarpstyle.sh, made adjustment to the indent flags
  

2019 MAY 25a
  * renamed
    - for1DL -> for_1DL
    - for2DL -> for_2DL
    - for3DL -> for_3DL
  * in src/common.h
    - changed the macro for for_1DL, for_2DL, for_3DL: now, they should be accompanied
      by { and } and not by end1DL, end2DL, end3DL
  * in src/common.h